--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+    <div class="container-fluid p-0 navbar-component">
+        <object data="./components/navbar.html" width="100%" height="100%"></object>
+    </div>
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-danger">
         <a class="navbar-brand" href="#">
-            <img src="./images/Logo.png" alt="logo" width="50px" height="50px">
+            <img src="./images/Logo-1.png" alt="logo" width="50px" height="50px">
         </a>
         <i>
-            <a class="navbar-brand" href="#">Beijing Emerson consultants</a>
+            <a class="navbar-brand text-white" href="#">Beijing Emerson consultants</a>
         </i>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="Toggle navigation">
@@ -31,23 +34,23 @@
         <div class="navbar-collapse collapse show" id="navbarNavDropdown" style="">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home </a>
+                    <a class="nav-link text-white" href="#">Home </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link text-white" href="#">About Us</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link text-white" href="#">Services</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Contact Us</a>
                 </li>
             </ul>
         </div>
-    </nav>
-    <div class="container-fluid bg-warning-subtle" style="height: 500px;">
+    </nav> -->
+    <div class="container-fluid bg-danger-subtle" style="height: 500px;">
         <div class="row align-items-center h-100">
             <div class="col-12">
                 <div class="header">
@@ -60,13 +63,13 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid bg-light" style="height: 500px;">
+    <!-- <div class="container-fluid bg-light" style="height: 500px;">
         <div class="row align-items-center h-100">
             <div class="col-12 d-flex justify-content-center align-items-center p-5">
                 <div class="header">
                     <h3 class="text-center text-uppercase underline-header">Our Vision</h3>
-                    <!-- <div class="bg-dark underline-header"></div> -->
-                </div>
+                     <div class="bg-dark underline-header"></div> -->
+    <!-- </div>
             </div>
             <div class="col-md-8 offset-md-2 align-items-center">
                 <p class="text-center">
@@ -78,32 +81,34 @@
                     seeks excellence recognizes that <b>Beijing Emerson Consultants </b> is set apart from the rest.
                 </p>
             </div>
-        </div>
-    </div>
+        </div> -->
+    <!-- </div> -->
     <div class="container-fluid bg-transparent" style="height: 500px;">
         <div class="row align-items-center h-100">
             <div class="col-12 d-flex align-items-center justify-content-around">
                 <div class="header">
-                    <h3 class="text-center text-uppercase"><a href="#" class="nav-link">About Us</a></h3>
+                    <h3 class="text-center text-uppercase link"><a href="/aboutUs.html" class="nav-link">About Us</a>
+                    </h3>
                 </div>
                 <div class="header">
-                    <h3 class="text-center text-uppercase"><a href="#" class="nav-link"> Our Services </a></h3>
+                    <h3 class="text-center text-uppercase link"><a href="#" class="nav-link"> Our Services </a></h3>
                 </div>
                 <div class="header">
-                    <h3 class="text-center text-uppercase"><a href="#" target="_blank" class="nav-link">Testimonials</a>
+                    <h3 class="text-center text-uppercase link "><a href="/testimonials.html" target="_blank"
+                            class="nav-link">Testimonials</a>
                     </h3>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid bg-info-subtle" style="height: 800px;">
+    <div class="container-fluid bg-warning-subtle" style="height: 860px;">
         <div class="row align-items-center h-100">
-            <div class="col-12 p-5  d-flex justify-content-center align-items-center">
+            <div class="col-12 p-4  d-flex justify-content-center align-items-center">
                 <div class="header">
                     <h3 class="text-center text-uppercase underline-header">Universities</h3>
                 </div>
             </div>
-            <div class="col-12 d-flex align-items-center justify-content-around">
+            <div class="col-12 mb-5 d-flex align-items-center justify-content-around">
                 <div class="col-3">
                     <div class="card">
                         <img src="./images/university-image.jpeg" class="card-img-top" alt="...">
@@ -146,9 +151,25 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid" style="height: 500px;">
+        <div class="row">
+            <div class="col-12 p-5  d-flex justify-content-center align-items-center">
+                <div class="header">
+                    <h3 class="text-center text-uppercase underline-header">Query</h3>
+                </div>
+            </div>
+            <div>
+
+            </div>
+        </div>
+    </div>
     <div class="container-fluid bg-dark" style="height: 500px;">
         <div class="row align-items-center h-100">
             <div class="col-12 text-white">
+                <div class="col-12 d-flex align-items-center justify-content-left p-4">
+                    <img src="./images/Logo 2.png" alt="" height="80px" width="80px">
+                    <h3 class="text-center text-uppercase">Beijing Emerson Consultants</h3>
+                </div>
                 <!-- <div class="header p-5">
                     <h3 class="text-center text-uppercase">Contact Us</h3>
                 </div> -->
@@ -201,3 +222,16 @@
 </body>
 
 </html>
+
+<style>
+    .link :hover {
+        background-color: #f1f1f1;
+        border-radius: 10px;
+        transition: 0.5s;
+    }
+
+    .navbar-component {
+        overflow: hidden !important;
+        height: 76px !important;
+    }
+</style>
